--- a/src/main/resources/templates/profile/updateProfile.html
+++ b/src/main/resources/templates/profile/updateProfile.html
@@ -13,7 +13,7 @@
     <div class="content">
         <h1 class="mb-3">Update profile</h1>
         <h5 class="mb-3">Fields marked with * can not be blank.</h5>
-        <form th:action="@{/templates/profile/update}" method="post" th:object="${user}">
+        <form th:action="@{/profile/update}" method="post" th:object="${user}">
             <div class="mb-3">
                 <label class="form-label" for="email">*Email:
                     <div>
