--- a/src/main/resources/static/css/registration.css
+++ b/src/main/resources/static/css/registration.css
@@ -3,6 +3,16 @@
     --bs-navbar-hover-color: rgba(255, 255, 255, 1);
 }
 
+.link-button {
+    background: none;
+    border: none;
+    color: rgba(255, 255, 255, 0.75);
+    cursor: pointer;
+}
+.link-button:hover {
+    color: rgba(255, 255, 255, 1);
+}
+
 .page-container {
     display: flex;
     flex-flow: column;
