--- a/src/main/resources/templates/deals/new-deal.html
+++ b/src/main/resources/templates/deals/new-deal.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>New Deal</title>
+    <title th:text="#{new-deal.title}">New Deal</title>
     <th:block th:insert="~{fragments/fragment-assets :: common-assets}"></th:block>
     <link rel="stylesheet" type="text/css" href="/static/css/deals/new-deal.css"/>
 </head>
 <body>
 <div class="page-container">
     <header class="navbar-header">
-        <th:block th:insert="~{fragments/fragment-navbar-deal :: navbar}"></th:block>
+        <th:block th:insert="~{fragments/fragment-navbar :: navbar}"></th:block>
     </header>
     <div class="content">
         <div th:if="${errors}">
             <p th:each="error : ${errors}" th:text="${error}">Error message</p>
         </div>
-        <h2 class="mb-3">New Deal:</h2>
+        <h2 class="mb-3"><span th:text="#{new-deal.header}">New Deal:</span></h2>
         <form class="col-4" th:action="@{/portfolios/{id}/new-deal(id=${portfolioId})}" method="post">
             <div>
                 <input type="hidden" name="portfolioId" th:value="${portfolioId}">
             </div>
             <div class="mb-3">
-                <label for="securityName" class="form-label">Security name and ticker</label>
+                <label for="securityName" class="form-label">
+                    <span th:text="#{new-deal.securityname}">Security name and ticker</span></label>
                 <input type="text" class="form-control" list="nameOptions" id="securityName"
                        name="securityNameAndTicker"
-                       th:value="${securityNameAndTicker}?: ' '" placeholder="Type to search...">
+                       th:value="${securityNameAndTicker}?: ' '" th:placeholder="#{new-deal.typetosearch}">
                 <datalist id="nameOptions">
                     <th:block th:each="name:${shareNames}" th:name="shareNames" th:object="${shareNames}">
                         <option th:value="${name}">
@@ -31,33 +32,34 @@
                 </datalist>
             </div>
             <div class="mb-3">
-                <label for="dealType" class="form-label">Select deal type</label>
+                <label for="dealType" class="form-label">
+                    <span th:text="#{new-deal.dealtype}">Select deal type</span></label>
                 <select class="form-control" id="dealType" name="dealType" required>
-                    <option th:selected="${dealType eq 'buy'}" value="buy">Buy</option>
-                    <option th:selected="${dealType eq 'sell'}" value="sell">Sell</option>
+                    <option th:selected="${dealType eq 'buy'}" value="buy" th:text="#{new-deal.dealtype.buy}">Buy</option>
+                    <option th:selected="${dealType eq 'sell'}" value="sell" th:text="#{new-deal.dealtype.sell}">Sell</option>
                 </select>
             </div>
             <div class="mb-3">
-                <label for="acquisitionPrice" class="form-label">Price</label>
+                <label for="acquisitionPrice" class="form-label"><span th:text="#{new-deal.price}">Price</span></label>
                 <input class="form-control" type="number" step="any" id="acquisitionPrice" name="acquisitionPrice"
                        onchange="acqValue()" required>
             </div>
             <div class="mb-3">
-                <label for="quantity" class="form-label">Quantity</label>
+                <label for="quantity" class="form-label"><span th:text="#{new-deal.quantity}">Quantity</span></label>
                 <input class="form-control" type="number" step="1" id="quantity" name="quantity" onchange="acqValue()"
                        required>
             </div>
             <div class="mb-3">
-                <label for="acquisitionValue" class="form-label">Acquisition value</label>
+                <label for="acquisitionValue" class="form-label"><span th:text="#{new-deal.acquisitionvalue}">Acquisition value</span></label>
                 <input class="form-control" type="number" step="any" id="acquisitionValue" name="acquisitionValue"
                        disabled>
             </div>
             <div class="mb-4">
-                <label for="date" class="form-label">Date</label>
+                <label for="date" class="form-label"><span th:text="#{new-deal.date}">Date</span></label>
                 <input class="form-control" type="date" id="date" name="date">
             </div>
             <div class="form-check form-switch mb-4">
-                <label class="form-check-label" for="hasCommission">Toggle to add/remove commissions</label>
+                <label class="form-check-label" for="hasCommission"><span th:text="#{new-deal.togglecommissions}">Toggle to add/remove commissions</span></label>
                 <input class="form-check-input" type="checkbox" id="hasCommission" name="hasCommission"
                        value="hasCommission"
                        data-bs-toggle="collapse" data-bs-target="#collapseCommissionForm"
@@ -65,11 +67,11 @@
             </div>
             <div class="collapse" id="collapseCommissionForm">
                 <!--Market commission-->
-                <p class="mb-1">Market commission</p>
+                <p class="mb-1"><span th:text="#{new-deal.marketcommission}">Market commission</span></p>
                 <div class="mb-3 p-3 border rounded">
                     <div class="form-check">
                         <label class="form-check-label" for="defaultMarketCommission">
-                            Default market commission
+                            <span th:text="#{new-deal.defaultmarketcommission}">Default market commission</span>
                         </label>
                         <input class="form-check-input" type="radio" name="marketCommissionType"
                                id="defaultMarketCommission"
@@ -84,13 +86,13 @@
                                    id="defaultMarketCommissionValue" readonly>
                         </div>
                         <div id="defaultMarketCommissionHelp" class="form-text mb-3">
-                            Minimum commission is &#8381;0.02
+                           <span th:text="#{new-deal.defaultmarketcommissionvalue}">Minimum commission is &#8381;0.02</span>
                         </div>
                     </div>
 
                     <div class="form-check">
                         <label class="form-check-label" for="customMarketCommission">
-                            Custom market commission
+                            <span th:text="#{new-deal.custommarketcommission}">Custom market commission</span>
                         </label>
                         <input class="form-check-input" type="radio" name="marketCommissionType"
                                id="customMarketCommission"
@@ -104,21 +106,22 @@
                 </div>
                 <!--Broker commission-->
                 <div class="mb-3">
-                    <label for="brokerCommissionValue">Broker commission</label>
+                    <label for="brokerCommissionValue"><span th:text="#{new-deal.brokercommission}">Broker commission</span></label>
                     <input class="form-control" type="number" step="0.01" name="brokerCommission"
                            id="brokerCommissionValue">
                 </div>
                 <!--    Other commission-->
                 <div class="mb-3">
-                    <label for="otherCommissionValue">Other commission</label>
+                    <label for="otherCommissionValue"><span th:text="#{new-deal.othercommission}">Other commission</span></label>
                     <input class="form-control" type="number" name="otherCommission" id="otherCommissionValue">
                 </div>
             </div>
             <div class="mb-3">
-                <label for="comment" class="form-label">Comment</label>
+                <label for="comment" class="form-label"><span th:text="#{new-deal.comment}">Comment</span></label>
                 <textarea class="form-control" id="comment" name="comment" rows="2"></textarea>
             </div>
-            <button class="btn btn-primary btn-lg btn-custom d-grid col-6 mx-auto mb-3" type="submit">Add deal</button>
+            <button class="btn btn-primary btn-lg btn-custom d-grid col-6 mx-auto mb-3" type="submit">
+                <span th:text="#{new-deal.button.adddeal}">Add deal</span></button>
         </form>
     </div>
 
