--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
+    <title th:text="#{login.title}">Login</title>
     <th:block th:insert="~{fragments/fragment-assets :: common-assets}"></th:block>
     <link rel="stylesheet" type="text/css" href="/static/css/login.css"/>
 </head>
 <body>
 <div class="page-container">
     <header class="navbar-header">
-        <div th:insert="~{fragments/fragment-navbar-login :: navbar-empty}"></div>
+        <div th:insert="~{fragments/fragment-navbar :: navbar}"></div>
     </header>
     <div class="content">
-        <h1 class="mb-3">Please, sign in</h1>
+        <h1 class="mb-3"><span th:text="#{login.invitation}">Please, sign in</span></h1>
         <form th:action="@{/login}" method="post">
             <div class="mb-3">
-                <label class="form-label" for="email">Email:
-                    <div>
-                        <input class="form-control-lg" id="email" type="email" name="email" placeholder="example@example.com" required/>
-                    </div>
-                </label>
+                <label class="form-label" for="email"><span th:text="#{login.email}">Email:</span></label><br>
+                <input class="form-control-lg" id="email" type="email" name="email"
+                       placeholder="example@example.com" required/>
             </div>
             <div class="mb-3">
-                <label class="form-label" for="password">Password:
-                    <div>
-                        <input class="form-control-lg" id="password" type="password" name="password" placeholder="Password" required/>
-                    </div>
-                </label>
+                <label class="form-label" for="password"><span th:text="#{login.password}">Password:</span></label><br>
+                <input class="form-control-lg" id="password" type="password" name="password"
+                       placeholder="Password" required/>
             </div>
             <div class="form-check mb-4 ps-0">
-                <input class="form-check-label custom-checkbox"  type="checkbox" name="remember-me" id="rememberMeCheck"/>
-                <label class="form-check-label" for="rememberMeCheck">Remember me</label>
+                <input class="form-check-label custom-checkbox" type="checkbox" name="remember-me"
+                       id="rememberMeCheck"/>
+                <label class="form-check-label" for="rememberMeCheck"><span
+                        th:text="#{login.rememberme}">Remember me</span></label>
             </div>
-            <button class="btn btn-primary btn-lg btn-custom d-grid col-6 mx-auto mb-4" type="submit">Log in</button>
+            <button class="btn btn-primary btn-lg btn-custom d-grid col-6 mx-auto mb-4" type="submit">
+                <span th:text="#{login.button.login}">Log in</span></button>
             <div th:if="${param.error}">
                 Email or password is incorrect!
             </div>
         </form>
         <div class="mb-5">
-            <span>Don't have account? <a th:href="@{/registration}">Register!</a></span><br>
+            <span th:text="#{login.noaccount}">Don't have account? </span> <a th:href="@{/registration}"><span
+                th:text="#{login.register}"> Register!</span></a><br>
         </div>
         <div class="mb-3">
-            <a th:href="@{/}">Back to main page</a>
+            <a th:href="@{/}"><span th:text="#{login.backtomain}">Back to main page</span></a>
         </div>
     </div>
 
