--- a/src/main/resources/templates/profile/updatePassword.html
+++ b/src/main/resources/templates/profile/updatePassword.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Update Profile</title>
+    <title th:text="#{profile.update.password.title}">Update Password</title>
     <th:block th:insert="~{fragments/fragment-assets :: common-assets}"></th:block>
     <link rel="stylesheet" type="text/css" href="/css/user/profile/profile.css"/>
 </head>
 <body>
 <div class="page-container">
     <header class="navbar-header">
-        <div th:insert="~{fragments/fragment-navbar-profile :: navbar}"></div>
+        <div th:insert="~{fragments/fragment-navbar :: navbar}"></div>
     </header>
     <div class="content">
-        <h1 class="mb-3">Update password</h1>
-        <h5 class="mb-3">Fields marked with * can not be blank.</h5>
+        <h1 class="mb-3"><span th:text="#{profile.update.password.header}">Update password</span></h1>
+        <h5 class="mb-3"><span th:text="#{profile.update.password.note}">Fields marked with * can not be blank.</span></h5>
         <form th:action="@{/profile/update/password}" method="post">
             <div class="mb-3">
-                <label class="form-label" for="password">*Password
+                <label class="form-label" for="password"><span th:text="#{profile.update.password.password}">*Password</span></label>
                     <div>
                         <input class="form-control" id="password" type="password" name="password"
                                placeholder="********">
                     </div>
-                </label>
+
             </div>
             <div class="mb-3">
-                <label class="form-label" for="confirmation">*Confirmation
+                <label class="form-label" for="confirmation"><span th:text="#{profile.update.password.confirmation}">*Confirmation</span></label>
                     <div>
                         <input class="form-control" id="confirmation" type="password" name="passwordConfirm"
                                placeholder="********">
                     </div>
-                </label>
+
             </div>
-            <button class="btn btn-primary btn-lg btn-custom d-grid col-6 mx-auto mb-4" type="submit">Update</button>
+            <button class="btn btn-primary btn-lg btn-custom d-grid col-8 mx-auto mb-4" type="submit">
+                <span th:text="#{profile.update.password.button.update}">Update</span></button>
         </form>
         <div class="mb-3" th:if="${errors}">
-            <p th:each="error : ${errors}" th:text="${error}">Error message</p>
+            <p th:each="error : ${errors}" th:text="${error}"><span th:text="#{profile.update.password.error}">Error message</span></p>
         </div>
         <div>
-            <a th:href="@{/profile}">Back to profile</a>
+            <a th:href="@{/profile}"><span th:text="#{profile.update.password.backtoprofile}">Back to profile</span></a>
         </div>
     </div>
 </div>
